@@ -40,11 +40,16 @@ tasks.named('check').configure {
     dependsOn(tasks.named('compileSpigotCompatibility'))
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs('-Dnet.bytebuddy.experimental=true')
+}
+
 dependencies {
     compileOnly('io.papermc.paper:paper-api:26.2.build.60-beta')
     spigotCompatibility('org.spigotmc:spigot-api:26.2-R0.1-SNAPSHOT')
 
     compileOnly('me.clip:placeholderapi:2.11.6') { transitive = false }
+    compileOnly('com.github.MilkBowl:VaultAPI:1.7') { transitive = false }
 
     compileOnly('org.projectlombok:lombok:1.18.44')
     annotationProcessor('org.projectlombok:lombok:1.18.44')
@@ -60,6 +65,8 @@ dependencies {
     testImplementation('junit:junit:4.13.2')
     testImplementation('io.papermc.paper:paper-api:26.2.build.60-beta')
     testImplementation('me.clip:placeholderapi:2.11.6') { transitive = false }
+    testImplementation('com.github.MilkBowl:VaultAPI:1.7') { transitive = false }
+    testImplementation('org.mockito:mockito-core:5.14.2')
 }
 
 publishing {
